// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas dentro de gifGrid should de hacr match con el snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    hola world
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading . . .
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`pruebas dentro de gifGrid should debe de mostrar items cuando carga imagenes useFetchsGisf 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    hola world
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="xx nada xx"
      url="Https://localhostfnsofbsofudnf"
    />
  </div>
</Fragment>
`;
